--- a/app/globals.css
+++ b/app/globals.css
@@ -20,7 +20,7 @@
         --popover: 222.2 84% 4.9%;
         --popover-foreground: 210 40% 98%;
         --primary: 46 100% 50%;
-        --primary-foreground: --background;
+        --primary-foreground: 222.2 84% 4.9%;
         --secondary: 226 100% 50%;
         --secondary-foreground: 210 40% 98%;
         --muted: 217.2 32.6% 17.5%;
@@ -32,6 +32,7 @@
         --border: 217.2 32.6% 17.5%;
         --input: 217.2 32.6% 17.5%;
         --ring: 212.7 26.8% 83.9%;
+        --radius: 0.5rem;
         --chart-1: 220 70% 50%;
         --chart-2: 160 60% 45%;
         --chart-3: 30 80% 55%;
@@ -46,5 +47,32 @@
     }
     body {
         @apply bg-background text-foreground;
+    }
+
+    /* TEXT STYLES */
+    h1 {
+        @apply scroll-m-20 text-4xl font-extrabold tracking-tight lg:text-5xl;
+    }
+    h2 {
+        @apply scroll-m-20 border-b pb-2 text-3xl font-semibold tracking-tight first:mt-0;
+    }
+    h3 {
+        @apply scroll-m-20 text-2xl font-semibold tracking-tight;
+    }
+    h4 {
+        @apply scroll-m-20 text-xl font-semibold tracking-tight;
+    }
+    p {
+        @apply leading-7 [&:not(:first-child)]:mt-6;
+    }
+    blockquote {
+        @apply mt-6 border-l-2 pl-6 italic;
+    }
+    code {
+        @apply relative rounded bg-muted px-[0.3rem] py-[0.2rem] font-mono text-sm font-semibold;
+    }
+
+    ul {
+        @apply my-6 ml-6 list-disc [&>li]:mt-2;
     }
 }
