--- a/app/globals.css
+++ b/app/globals.css
@@ -62,8 +62,11 @@
     h4 {
         @apply scroll-m-20 text-xl font-semibold tracking-tight text-slate-300;
     }
+    h5 {
+        @apply scroll-m-20 text-lg font-semibold tracking-tight text-slate-400;
+    }
     p {
-        @apply leading-7 text-slate-400;
+        @apply text-slate-400;
     }
     blockquote {
         @apply mt-6 border-l-2 pl-6 italic;
