Edited About page

--- a/app/globals.css
+++ b/app/globals.css
@@ -73,7 +73,7 @@
     }
 
     ul {
-        @apply my-6 ml-6 list-disc [&>li]:mt-2;
+        @apply my-6 ml-6 list-disc [&>li]:mt-2 text-slate-400;
     }
 
     a {
